--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -10,10 +10,6 @@
     font-weight: bold;
     font-size: 24px;
   }
-  /* .cartpriceinfo {
-    display: flex;
-    flex-direction: row;
-  } */
   
   .cart-items-list {
     list-style-type: none;
@@ -24,25 +20,30 @@
   .cart-item {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start; /* Align items to the top */
     padding: 10px 0;
     border-bottom: 1px solid #E9E9E9;
   }
   
-  /* .item-details {
+  .item-details {
     display: flex;
     flex-direction: column;
-  } */
-  .try {
+    width: 70%; /* Adjust width as necessary */
+  }
+  
+  .item-info {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    gap: 10px; /* Space between quantity, price, and remove button */
+    margin-top: 5px; /* Space between name and other details */
   }
   
   .item-name {
     font-weight: bold;
   }
   
-  .item-quantity {
+  .item-quantity,
+  .item-price {
     color: #C73B0F;
   }
   
